--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dev_dependencies:
     sdk: flutter
   http: ^1.2.2
   fl_chart: 0.68.0
+  liquid_progress_indicator_v2: ^0.5.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
