--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^1.2.2
+  fl_chart: 0.68.0
+  liquid_progress_indicator_v2: ^0.5.0
+  syncfusion_flutter_core: 25.2.4
+  syncfusion_flutter_gauges: 25.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,9 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^1.2.2
-  fl_chart: 0.68.0
-  liquid_progress_indicator_v2: ^0.5.0
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
