--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   syncfusion_flutter_core: 25.2.4
   syncfusion_flutter_gauges: 25.2.4
   flutter_xlider: ^3.5.0
+  image_picker: ^1.1.2
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
